# hw4-prim-mst

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/: student.csv
mst/: graph.py
test/: test_mst.py
