[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.8.16'",
	]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{name = "galenxing",email = "galenxing@berkeley.edu"}
	]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest", 
	"numpy",
	"scipy",
	"scikit-learn"
]
